performed-react-hw-01

--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,26 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+p,
+h2 {
+  margin: 0;
+  padding: 0;
+}
+#root {
+  width: 360px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  @media screen and (min-width: 768px) {
+    width: 768px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
+  }
+}
